# XYZwhiteboard

./: .gitignore  CMakeLists.txt  CodingNote.md  README.md  build.sh  build2.sh  wb.pcap  whiteboard.pcap
.VSCodeCounter/2024-02-17_13-35-08/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-02-17_13-37-46/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-02-17_13-38-42/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-02-17_13-39-50/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-02-18_14-44-43/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.cache/clangd/index/: client.cpp.919ECC886DBAE5A9.idx  server.cpp.E124079BA2CA9119.idx
frontend/: createsession.ui  mainwidget.cpp  mainwidget.h  mainwidget.ui  shareWhiteboard.pro
proto/: CMakeLists.txt  action.proto  element.proto  packet.proto
src/: CMakeLists.txt
src/base/: element.cpp  element.hpp  exception.hpp  network.cpp  network.hpp  packet.cpp  packet.hpp  packet_client.cpp  packet_server.cpp  protobuf_addon.hpp  utils.cpp  utils.hpp
src/client/: client.cpp  client.hpp
src/example/: test_client.cpp  test_element.cpp  test_server.cpp
src/server/: database.cpp  database.hpp  server.cpp  server.hpp  thread_pool.hpp
