PROJECT(X_whiteboard)
CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
SET(CMAKE_CXX_FLAGS "-g -Wall -Werror -std=gnu++17")

find_package(Protobuf REQUIRED)

ADD_SUBDIRECTORY(proto)
ADD_SUBDIRECTORY(src)

# set(SRC_PATH "${PROJECT_SOURCE_DIR}/src" ${SRC_PATH})

# INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
# INCLUDE_DIRECTORIES(${Protobuf_INCLUDE_DIRS})
# ADD_EXECUTABLE(main ${SRC_PATH}/main.cpp)
# TARGET_LINK_LIBRARIES(main proto ${Protobuf_LIBRARIES})