INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
PROTOBUF_GENERATE_CPP(ACTION_PROTO_SRC ACTION_PROTO_HEADER action.proto)
PROTOBUF_GENERATE_CPP(ELEMENT_PROTO_SRC ELEMENT_PROTO_HEADER element.proto)
PROTOBUF_GENERATE_CPP(PACKET_PROTO_SRC PACKET_PROTO_HEADER packet.proto)
ADD_LIBRARY(proto ${ACTION_PROTO_SRC} ${ACTION_PROTO_HEADER} ${ELEMENT_PROTO_SRC} ${ELEMENT_PROTO_HEADER} ${PACKET_PROTO_SRC} ${PACKET_PROTO_HEADER})
target_include_directories(proto PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
